docs/versions/1.3/api/typed/function_catalog.md
# DuckDB typed function catalog (DuckPlus 1.3)

This catalog enumerates every DuckDB scalar, aggregate, and window function
exposed through DuckPlus' static typed API. Entries are grouped by return
category to match the generated namespaces.

Aggregate helpers also expose ``_filter`` variants that render ``FILTER
(WHERE ...)`` with a typed boolean predicate as the first argument.

The file is auto-generated by ``scripts/generate_function_namespaces.py``;
run the script after upgrading DuckDB to refresh the catalog.

## Scalar functions

### Scalar blob results
- ``create_sort_key``
- ``encode``
- ``from_base64``
- ``from_binary``
- ``from_hex``
- ``repeat``
- ``unbin``
- ``unhex``

### Scalar boolean results
- ``array_contains``
- ``array_has``
- ``array_has_all``
- ``array_has_any``
- ``can_cast_implicitly``
- ``contains``
- ``ends_with``
- ``has_any_column_privilege``
- ``has_column_privilege``
- ``has_database_privilege``
- ``has_foreign_data_wrapper_privilege``
- ``has_function_privilege``
- ``has_language_privilege``
- ``has_schema_privilege``
- ``has_sequence_privilege``
- ``has_server_privilege``
- ``has_table_privilege``
- ``has_tablespace_privilege``
- ``ilike_escape``
- ``in_search_path``
- ``is_histogram_other_bin``
- ``isfinite``
- ``isinf``
- ``isnan``
- ``json_contains``
- ``json_exists``
- ``json_valid``
- ``like_escape``
- ``list_contains``
- ``list_has``
- ``list_has_all``
- ``list_has_any``
- ``map_contains``
- ``map_contains_entry``
- ``map_contains_value``
- ``not_ilike_escape``
- ``not_like_escape``
- ``pg_collation_is_visible``
- ``pg_conversion_is_visible``
- ``pg_function_is_visible``
- ``pg_has_role``
- ``pg_is_other_temp_schema``
- ``pg_opclass_is_visible``
- ``pg_operator_is_visible``
- ``pg_opfamily_is_visible``
- ``pg_table_is_visible``
- ``pg_ts_config_is_visible``
- ``pg_ts_dict_is_visible``
- ``pg_ts_parser_is_visible``
- ``pg_ts_template_is_visible``
- ``pg_type_is_visible``
- ``prefix``
- ``regexp_full_match``
- ``regexp_matches``
- ``signbit``
- ``starts_with``
- ``struct_contains``
- ``struct_has``
- ``suffix``

Symbolic operators:
- ``!~~``
- ``!~~*``
- ``&&``
- ``<@``
- ``@>``
- ``^@``
- ``~~``
- ``~~*``
- ``~~~``

### Scalar generic results
- ``__internal_compress_string_uhugeint``
- ``__internal_decompress_integral_uhugeint``
- ``abs``
- ``add``
- ``aggregate``
- ``apply``
- ``array_aggr``
- ``array_aggregate``
- ``array_append``
- ``array_apply``
- ``array_cat``
- ``array_concat``
- ``array_distinct``
- ``array_extract``
- ``array_filter``
- ``array_grade_up``
- ``array_intersect``
- ``array_pop_back``
- ``array_pop_front``
- ``array_prepend``
- ``array_push_back``
- ``array_push_front``
- ``array_reduce``
- ``array_resize``
- ``array_reverse``
- ``array_reverse_sort``
- ``array_select``
- ``array_slice``
- ``array_sort``
- ``array_transform``
- ``array_value``
- ``array_where``
- ``array_zip``
- ``bitstring``
- ``cast_to_type``
- ``col_description``
- ``combine``
- ``concat``
- ``constant_or_null``
- ``current_date``
- ``current_localtime``
- ``current_localtimestamp``
- ``current_setting``
- ``date_part``
- ``date_trunc``
- ``datepart``
- ``datetrunc``
- ``divide``
- ``element_at``
- ``enum_code``
- ``epoch_ms``
- ``equi_width_bins``
- ``error``
- ``filter``
- ``finalize``
- ``flatten``
- ``from_json``
- ``from_json_strict``
- ``generate_series``
- ``generate_subscripts``
- ``get_current_time``
- ``get_current_timestamp``
- ``getvariable``
- ``grade_up``
- ``greatest``
- ``inet_client_addr``
- ``inet_client_port``
- ``inet_server_addr``
- ``inet_server_port``
- ``json_transform``
- ``json_transform_strict``
- ``last_day``
- ``least``
- ``list_aggr``
- ``list_aggregate``
- ``list_any_value``
- ``list_append``
- ``list_apply``
- ``list_approx_count_distinct``
- ``list_avg``
- ``list_bit_and``
- ``list_bit_or``
- ``list_bit_xor``
- ``list_bool_and``
- ``list_bool_or``
- ``list_cat``
- ``list_concat``
- ``list_count``
- ``list_distinct``
- ``list_element``
- ``list_entropy``
- ``list_extract``
- ``list_filter``
- ``list_first``
- ``list_grade_up``
- ``list_histogram``
- ``list_intersect``
- ``list_kurtosis``
- ``list_kurtosis_pop``
- ``list_last``
- ``list_mad``
- ``list_max``
- ``list_median``
- ``list_min``
- ``list_mode``
- ``list_pack``
- ``list_prepend``
- ``list_product``
- ``list_reduce``
- ``list_resize``
- ``list_reverse``
- ``list_reverse_sort``
- ``list_select``
- ``list_sem``
- ``list_skewness``
- ``list_slice``
- ``list_sort``
- ``list_stddev_pop``
- ``list_stddev_samp``
- ``list_string_agg``
- ``list_sum``
- ``list_transform``
- ``list_value``
- ``list_var_pop``
- ``list_var_samp``
- ``list_where``
- ``list_zip``
- ``make_date``
- ``make_time``
- ``make_timestamp``
- ``make_timestamp_ms``
- ``make_timestamp_ns``
- ``make_timestamptz``
- ``map``
- ``map_concat``
- ``map_entries``
- ``map_extract``
- ``map_extract_value``
- ``map_from_entries``
- ``map_keys``
- ``map_values``
- ``md5_number``
- ``mod``
- ``multiply``
- ``now``
- ``nullif``
- ``obj_description``
- ``parse_duckdb_log_message``
- ``pg_conf_load_time``
- ``pg_get_expr``
- ``pg_postmaster_start_time``
- ``range``
- ``reduce``
- ``regexp_split_to_table``
- ``remap_struct``
- ``repeat``
- ``replace_type``
- ``row``
- ``set_bit``
- ``setseed``
- ``shobj_description``
- ``strptime``
- ``struct_concat``
- ``struct_extract``
- ``struct_extract_at``
- ``struct_insert``
- ``struct_pack``
- ``struct_update``
- ``subtract``
- ``time_bucket``
- ``timezone``
- ``to_timestamp``
- ``today``
- ``transaction_timestamp``
- ``trunc``
- ``try_strptime``
- ``union_extract``
- ``union_tag``
- ``union_value``
- ``unpivot_list``
- ``uuid_extract_timestamp``
- ``variant_extract``
- ``write_log``
- ``xor``

Symbolic operators:
- ``%``
- ``&``
- ``*``
- ``+``
- ``-``
- ``//``
- ``<<``
- ``>>``
- ``@``
- ``|``
- ``||``
- ``~``

### Scalar numeric results
- ``__internal_compress_integral_ubigint``
- ``__internal_compress_integral_uinteger``
- ``__internal_compress_integral_usmallint``
- ``__internal_compress_integral_utinyint``
- ``__internal_compress_string_hugeint``
- ``__internal_compress_string_ubigint``
- ``__internal_compress_string_uinteger``
- ``__internal_compress_string_usmallint``
- ``__internal_compress_string_utinyint``
- ``__internal_decompress_integral_bigint``
- ``__internal_decompress_integral_hugeint``
- ``__internal_decompress_integral_integer``
- ``__internal_decompress_integral_smallint``
- ``__internal_decompress_integral_ubigint``
- ``__internal_decompress_integral_uinteger``
- ``__internal_decompress_integral_usmallint``
- ``abs``
- ``acos``
- ``acosh``
- ``add``
- ``age``
- ``array_cosine_distance``
- ``array_cosine_similarity``
- ``array_cross_product``
- ``array_distance``
- ``array_dot_product``
- ``array_indexof``
- ``array_inner_product``
- ``array_length``
- ``array_negative_dot_product``
- ``array_negative_inner_product``
- ``array_position``
- ``array_unique``
- ``ascii``
- ``asin``
- ``asinh``
- ``atan``
- ``atan2``
- ``atanh``
- ``bit_count``
- ``bit_length``
- ``bit_position``
- ``cardinality``
- ``cbrt``
- ``ceil``
- ``ceiling``
- ``century``
- ``char_length``
- ``character_length``
- ``cos``
- ``cosh``
- ``cot``
- ``current_connection_id``
- ``current_query_id``
- ``current_transaction_id``
- ``currval``
- ``damerau_levenshtein``
- ``date_add``
- ``date_diff``
- ``date_part``
- ``date_sub``
- ``date_trunc``
- ``datediff``
- ``datepart``
- ``datesub``
- ``datetrunc``
- ``day``
- ``dayofmonth``
- ``dayofweek``
- ``dayofyear``
- ``decade``
- ``degrees``
- ``divide``
- ``editdist3``
- ``epoch``
- ``epoch_ms``
- ``epoch_ns``
- ``epoch_us``
- ``era``
- ``even``
- ``exp``
- ``factorial``
- ``fdiv``
- ``floor``
- ``fmod``
- ``gamma``
- ``gcd``
- ``generate_series``
- ``geomean``
- ``geometric_mean``
- ``get_bit``
- ``get_block_size``
- ``greatest_common_divisor``
- ``hamming``
- ``hash``
- ``hour``
- ``instr``
- ``isodow``
- ``isoyear``
- ``jaccard``
- ``jaro_similarity``
- ``jaro_winkler_similarity``
- ``json_array_length``
- ``julian``
- ``lcm``
- ``least_common_multiple``
- ``len``
- ``length``
- ``length_grapheme``
- ``levenshtein``
- ``lgamma``
- ``list_cosine_distance``
- ``list_cosine_similarity``
- ``list_distance``
- ``list_dot_product``
- ``list_indexof``
- ``list_inner_product``
- ``list_negative_dot_product``
- ``list_negative_inner_product``
- ``list_position``
- ``list_unique``
- ``ln``
- ``log``
- ``log10``
- ``log2``
- ``map_to_pg_oid``
- ``md5_number_lower``
- ``md5_number_upper``
- ``microsecond``
- ``millennium``
- ``millisecond``
- ``minute``
- ``mismatches``
- ``mod``
- ``month``
- ``multiply``
- ``nanosecond``
- ``nextafter``
- ``nextval``
- ``normalized_interval``
- ``octet_length``
- ``ord``
- ``pg_my_temp_schema``
- ``pi``
- ``position``
- ``pow``
- ``power``
- ``quarter``
- ``radians``
- ``random``
- ``range``
- ``round``
- ``round_even``
- ``roundbankers``
- ``second``
- ``sign``
- ``sin``
- ``sinh``
- ``sqrt``
- ``strlen``
- ``strpos``
- ``struct_indexof``
- ``struct_position``
- ``subtract``
- ``tan``
- ``tanh``
- ``timetz_byte_comparable``
- ``timezone``
- ``timezone_hour``
- ``timezone_minute``
- ``to_centuries``
- ``to_days``
- ``to_decades``
- ``to_hours``
- ``to_microseconds``
- ``to_millennia``
- ``to_milliseconds``
- ``to_minutes``
- ``to_months``
- ``to_quarters``
- ``to_seconds``
- ``to_weeks``
- ``to_years``
- ``trunc``
- ``txid_current``
- ``unicode``
- ``uuid_extract_version``
- ``wavg``
- ``week``
- ``weekday``
- ``weekofyear``
- ``weighted_avg``
- ``xor``
- ``year``
- ``yearweek``

Symbolic operators:
- ``!__postfix``
- ``%``
- ``&``
- ``*``
- ``**``
- ``+``
- ``-``
- ``/``
- ``//``
- ``<->``
- ``<<``
- ``<=>``
- ``>>``
- ``@``
- ``^``
- ``|``
- ``~``

### Scalar varchar results
- ``__internal_decompress_string``
- ``alias``
- ``array_extract``
- ``array_to_json``
- ``array_to_string``
- ``array_to_string_comma_default``
- ``bar``
- ``base64``
- ``bin``
- ``chr``
- ``concat_ws``
- ``current_catalog``
- ``current_database``
- ``current_query``
- ``current_role``
- ``current_schema``
- ``current_schemas``
- ``current_user``
- ``dayname``
- ``decode``
- ``enum_first``
- ``enum_last``
- ``enum_range``
- ``enum_range_boundary``
- ``format``
- ``formatReadableDecimalSize``
- ``formatReadableSize``
- ``format_bytes``
- ``format_pg_type``
- ``format_type``
- ``gen_random_uuid``
- ``hex``
- ``icu_collate_af``
- ``icu_collate_am``
- ``icu_collate_ar``
- ``icu_collate_ar_sa``
- ``icu_collate_as``
- ``icu_collate_az``
- ``icu_collate_be``
- ``icu_collate_bg``
- ``icu_collate_bn``
- ``icu_collate_bo``
- ``icu_collate_br``
- ``icu_collate_bs``
- ``icu_collate_ca``
- ``icu_collate_ceb``
- ``icu_collate_chr``
- ``icu_collate_cs``
- ``icu_collate_cy``
- ``icu_collate_da``
- ``icu_collate_de``
- ``icu_collate_de_at``
- ``icu_collate_dsb``
- ``icu_collate_dz``
- ``icu_collate_ee``
- ``icu_collate_el``
- ``icu_collate_en``
- ``icu_collate_en_us``
- ``icu_collate_eo``
- ``icu_collate_es``
- ``icu_collate_et``
- ``icu_collate_fa``
- ``icu_collate_fa_af``
- ``icu_collate_ff``
- ``icu_collate_fi``
- ``icu_collate_fil``
- ``icu_collate_fo``
- ``icu_collate_fr``
- ``icu_collate_fr_ca``
- ``icu_collate_fy``
- ``icu_collate_ga``
- ``icu_collate_gl``
- ``icu_collate_gu``
- ``icu_collate_ha``
- ``icu_collate_haw``
- ``icu_collate_he``
- ``icu_collate_he_il``
- ``icu_collate_hi``
- ``icu_collate_hr``
- ``icu_collate_hsb``
- ``icu_collate_hu``
- ``icu_collate_hy``
- ``icu_collate_id``
- ``icu_collate_id_id``
- ``icu_collate_ig``
- ``icu_collate_is``
- ``icu_collate_it``
- ``icu_collate_ja``
- ``icu_collate_ka``
- ``icu_collate_kk``
- ``icu_collate_kl``
- ``icu_collate_km``
- ``icu_collate_kn``
- ``icu_collate_ko``
- ``icu_collate_kok``
- ``icu_collate_ku``
- ``icu_collate_ky``
- ``icu_collate_lb``
- ``icu_collate_lkt``
- ``icu_collate_ln``
- ``icu_collate_lo``
- ``icu_collate_lt``
- ``icu_collate_lv``
- ``icu_collate_mk``
- ``icu_collate_ml``
- ``icu_collate_mn``
- ``icu_collate_mr``
- ``icu_collate_ms``
- ``icu_collate_mt``
- ``icu_collate_my``
- ``icu_collate_nb``
- ``icu_collate_nb_no``
- ``icu_collate_ne``
- ``icu_collate_nl``
- ``icu_collate_nn``
- ``icu_collate_noaccent``
- ``icu_collate_om``
- ``icu_collate_or``
- ``icu_collate_pa``
- ``icu_collate_pa_in``
- ``icu_collate_pl``
- ``icu_collate_ps``
- ``icu_collate_pt``
- ``icu_collate_ro``
- ``icu_collate_ru``
- ``icu_collate_sa``
- ``icu_collate_se``
- ``icu_collate_si``
- ``icu_collate_sk``
- ``icu_collate_sl``
- ``icu_collate_smn``
- ``icu_collate_sq``
- ``icu_collate_sr``
- ``icu_collate_sr_ba``
- ``icu_collate_sr_me``
- ``icu_collate_sr_rs``
- ``icu_collate_sv``
- ``icu_collate_sw``
- ``icu_collate_ta``
- ``icu_collate_te``
- ``icu_collate_th``
- ``icu_collate_tk``
- ``icu_collate_to``
- ``icu_collate_tr``
- ``icu_collate_ug``
- ``icu_collate_uk``
- ``icu_collate_ur``
- ``icu_collate_uz``
- ``icu_collate_vi``
- ``icu_collate_wae``
- ``icu_collate_wo``
- ``icu_collate_xh``
- ``icu_collate_yi``
- ``icu_collate_yo``
- ``icu_collate_yue``
- ``icu_collate_yue_cn``
- ``icu_collate_zh``
- ``icu_collate_zh_cn``
- ``icu_collate_zh_hk``
- ``icu_collate_zh_mo``
- ``icu_collate_zh_sg``
- ``icu_collate_zh_tw``
- ``icu_collate_zu``
- ``icu_sort_key``
- ``json``
- ``json_array``
- ``json_deserialize_sql``
- ``json_extract``
- ``json_extract_path``
- ``json_extract_path_text``
- ``json_extract_string``
- ``json_group_array``
- ``json_group_object``
- ``json_group_structure``
- ``json_keys``
- ``json_merge_patch``
- ``json_object``
- ``json_pretty``
- ``json_quote``
- ``json_serialize_plan``
- ``json_serialize_sql``
- ``json_structure``
- ``json_type``
- ``json_value``
- ``lcase``
- ``left``
- ``left_grapheme``
- ``list_element``
- ``list_extract``
- ``lower``
- ``lpad``
- ``ltrim``
- ``md5``
- ``monthname``
- ``nfc_normalize``
- ``parse_dirname``
- ``parse_dirpath``
- ``parse_filename``
- ``parse_path``
- ``pg_get_constraintdef``
- ``pg_get_viewdef``
- ``pg_size_pretty``
- ``pg_typeof``
- ``printf``
- ``regexp_escape``
- ``regexp_extract``
- ``regexp_extract_all``
- ``regexp_replace``
- ``regexp_split_to_array``
- ``repeat``
- ``replace``
- ``reverse``
- ``right``
- ``right_grapheme``
- ``row_to_json``
- ``rpad``
- ``rtrim``
- ``session_user``
- ``sha1``
- ``sha256``
- ``split``
- ``split_part``
- ``stats``
- ``str_split``
- ``str_split_regex``
- ``strftime``
- ``string_split``
- ``string_split_regex``
- ``string_to_array``
- ``strip_accents``
- ``substr``
- ``substring``
- ``substring_grapheme``
- ``to_base``
- ``to_base64``
- ``to_binary``
- ``to_hex``
- ``to_json``
- ``translate``
- ``trim``
- ``typeof``
- ``ucase``
- ``upper``
- ``url_decode``
- ``url_encode``
- ``user``
- ``uuid``
- ``uuidv4``
- ``uuidv7``
- ``variant_typeof``
- ``vector_type``
- ``version``

Symbolic operators:
- ``->>``


## Aggregate functions

### Aggregate blob results
- ``arg_max``
- ``arg_max_null``
- ``arg_min``
- ``arg_min_null``
- ``argmax``
- ``argmin``
- ``max_by``
- ``min_by``

### Aggregate boolean results
- ``bool_and``
- ``bool_or``

### Aggregate generic results
- ``any_value``
- ``approx_quantile``
- ``approx_top_k``
- ``arbitrary``
- ``arg_max``
- ``arg_max_null``
- ``arg_min``
- ``arg_min_null``
- ``argmax``
- ``argmin``
- ``array_agg``
- ``avg``
- ``bit_and``
- ``bit_or``
- ``bit_xor``
- ``bitstring_agg``
- ``first``
- ``histogram``
- ``histogram_exact``
- ``last``
- ``list``
- ``max``
- ``max_by``
- ``mean``
- ``median``
- ``min``
- ``min_by``
- ``mode``
- ``quantile``
- ``quantile_cont``
- ``quantile_disc``
- ``sum``

### Aggregate numeric results
- ``any_value``
- ``approx_count_distinct``
- ``approx_quantile``
- ``arbitrary``
- ``arg_max``
- ``arg_max_null``
- ``arg_min``
- ``arg_min_null``
- ``argmax``
- ``argmin``
- ``avg``
- ``bit_and``
- ``bit_or``
- ``bit_xor``
- ``corr``
- ``count``
- ``count_if``
- ``count_star``
- ``countif``
- ``covar_pop``
- ``covar_samp``
- ``entropy``
- ``favg``
- ``first``
- ``fsum``
- ``kahan_sum``
- ``kurtosis``
- ``kurtosis_pop``
- ``last``
- ``mad``
- ``max_by``
- ``mean``
- ``min_by``
- ``product``
- ``quantile_cont``
- ``regr_avgx``
- ``regr_avgy``
- ``regr_count``
- ``regr_intercept``
- ``regr_r2``
- ``regr_slope``
- ``regr_sxx``
- ``regr_sxy``
- ``regr_syy``
- ``reservoir_quantile``
- ``sem``
- ``skewness``
- ``stddev``
- ``stddev_pop``
- ``stddev_samp``
- ``sum``
- ``sum_no_overflow``
- ``sumkahan``
- ``var_pop``
- ``var_samp``
- ``variance``

### Aggregate varchar results
- ``arg_max``
- ``arg_max_null``
- ``arg_min``
- ``arg_min_null``
- ``argmax``
- ``argmin``
- ``group_concat``
- ``listagg``
- ``max_by``
- ``min_by``
- ``string_agg``


## Window functions

(No functions exposed in this release.)
